--- a/index.html
+++ b/index.html
@@ -6,57 +6,140 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <title>Knitty Kitty</title>
 </head>
 
 <body>
     <section id="front-page">
-        <div id="button-list">
+        <nav>
+            <div class="hamburger">
+                <a href="javascript:void(0);" id="hamburger-icon">
+                    <img src="./images/bars-solid.svg" alt="">
+                </a>
+            </div>
+            <h1>Knitty Kitty </h1><img src="./images/kitty.png" alt="" width="42px">
+            <button id="back-btn"><img src="./images/xmark-solid.svg" alt=""></button>
+        </nav>
+        <button id="create">Create a project</button>
+        <div id="button-list"></div>
+        <div>
+            <div>
+                <img src="./images/kitten-play.png" alt="">
+            </div>
 
         </div>
-        <!-- <button id="btn-1">show project 1</button>
-        <button id="btn-2">show project 2</button> -->
-        <button id="back-btn">go back</button>
+
     </section>
-    <section id="project-list">
-        <section class="project" id="project-1">
-            <div class="part" id="p1-p1">
-                <div class="dashboard">
+    <section id="off-screen">
+        <section id="project-list">
+            <section class="project" id="project-1">
+                <div class="part" id="p1-p1">
+                    <div class="dashboard">
+                        <h2>Project name</h2>
+                        <div class="counter">0</div>
+                        <div class="controls right-handed">
+                            <div class="reset"><img src="./images/rotate-right-solid.svg" alt="reset"></div>
+                            <div class="minus"><img src="./images/circle-minus.svg" alt="minus"></div>
+                            <div class="count-by-text">COUNT BY:</div>
+                            <div class="count-by"><span class="count-by-number">0</span></div>
+                            <div class="plus"><img src="./images/circle-plus.svg" alt="plus"></div>
+                        </div>
+                        <div class="cartoon">
+                            <img src="./images/yarn-cat03.png" alt="">
+                        </div>
 
+                    </div>
                 </div>
+                <div class="part" id="p1-p2">
+                    <div class="dashboard">
+
+                    </div>
+                </div>
+            </section>
+            <section class="project" id="project-2">
+                <div class="part" id="p2-p1">
+                    <div class="dashboard">
+                        project 2
+                    </div>
+                </div>
+                <div class="part" id="p2-p2">
+                    <div class="dashboard">
+
+                    </div>
+                </div>
+            </section>
+            <section class="project" id="project-3">
+                <div class="part" id="p3-p1">
+                    <div class="dashboard">
+                        project 3
+                    </div>
+                </div>
+                <div class="part" id="p3-p2">
+                    <div class="dashboard">
+
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section id="create-project">
+            <h2>Edit Project</h2>
+            <div>
+                <label for="project_name">Project Name:</label>
+                <input type="text" name="project_name" id="project_name" placeholder="Your project name">
             </div>
-            <div class="part" id="p1-p2">
-                <div class="dashboard">
-
-                </div>
+            <div>
+                <label for="add_parts">Several parts:</label>
+                <input type="checkbox" name="add_parts" id="add_parts">
+            </div>
+            <p>E.g: for a sweater you might want to add sub-parts such as front, back or sleeve.</p>
+            <div>
+                <label for="show_second_counter">Show Second Counter:</label>
+                <input type="checkbox" name="show_second_counter" id="show_second_sounter">
+            </div>
+            <div>
+                <label for="status">Status:</label>
+                <select name="status" id="status">
+                    <option value="in-progress">In Progress</option>
+                    <option value="finished">Finished</option>
+                </select>
+            </div>
+            <div>
+                <label for="needle_size">Needle Size:</label>
+                <input type="number" name="needle_size" id="needle_size" placeholder="0">
+            </div>
+            <div>
+                <label for="yarn_details">Yarn Details:</label>
+                <input type="text" name="yarn_details" id="yarn_details" placeholder="e.g. double knit">
+            </div>
+            <div>
+                <label for="cast_on">Cast on:</label>
+                <input type="number" name="cast_on" id="cast_on" placeholder="0">
+            </div>
+            <div>
+                <label for="stitch_name">Stitch Name:</label>
+                <input type="text" name="stitch_name" id="stitch_name" placeholder="e.g. garter stich">
+            </div>
+            <div id="create-buttons">
+                <button id="delete-btn">Delete</button>
+                <button id="save-btn">Save</button>
             </div>
         </section>
-        <section class="project" id="project-2">
-            <div class="part" id="p2-p1">
-                <div class="dashboard">
+        <section id="settings-menu">
+            <h2>settings menu</h2>
+            <div>
+                <label for="which_handed">Left or Right Handed?</label>
+                <select name="which_handed" id="which_handed">
 
-                </div>
-            </div>
-            <div class="part" id="p2-p2">
-                <div class="dashboard">
-
-                </div>
-            </div>
-        </section>
-        <section class="project" id="project-3">
-            <div class="part" id="p3-p1">
-                <div class="dashboard">
-
-                </div>
-            </div>
-            <div class="part" id="p3-p2">
-                <div class="dashboard">
-
-                </div>
+                    <option value="right">Right Handed</option>
+                    <option value="left">Left Handed</option>
+                </select>
             </div>
         </section>
     </section>
-
     <script src="script.js"></script>
 </body>
 
